// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditConsoleURLDialog /> renders correctly 1`] = `
<EditConsoleURLDialog
  closeModal={[MockFunction]}
  clusterID="some-id"
  consoleURL="http://www.example.com"
  editClusterResponse={
    Object {
      "error": false,
      "errorMessage": "",
    }
  }
  isOpen={true}
  onClose={[MockFunction]}
  resetResponse={[MockFunction]}
  submit={[MockFunction]}
>
  <Modal
    isPrimaryDisabled={true}
    onClose={[Function]}
    onPrimaryClick={[Function]}
    onSecondaryClick={[Function]}
    primaryText="Save"
    secondaryText="Cancel"
    title="Edit console URL"
  >
    <Modal
      actions={
        Array [
          <Button
            isDisabled={true}
            onClick={[Function]}
            type="submit"
            variant="primary"
          >
            Save
          </Button>,
          <Button
            onClick={[Function]}
            variant="secondary"
          >
            Cancel
          </Button>,
        ]
      }
      appendTo={[Function]}
      aria-describedby=""
      aria-label=""
      aria-labelledby=""
      className={null}
      hasNoBodyWrapper={false}
      isOpen={true}
      onClose={[Function]}
      ouiaSafe={true}
      showClose={true}
      title="Edit console URL"
      variant="small"
    >
      <Portal
        containerInfo={
          <div>
            <div
              class="pf-c-backdrop"
            >
              <div
                class="pf-l-bullseye"
              >
                <div
                  aria-describedby="pf-modal-part-2"
                  aria-labelledby="pf-modal-part-1"
                  aria-modal="true"
                  class="pf-c-modal-box pf-m-sm"
                  data-ouia-component-id="0"
                  data-ouia-component-type="PF4/ModalContent"
                  data-ouia-safe="true"
                  id="pf-modal-part-0"
                  role="dialog"
                >
                  <button
                    aria-disabled="false"
                    aria-label="Close"
                    class="pf-c-button pf-m-plain"
                    data-ouia-component-id="1"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 352 512"
                      width="1em"
                    >
                      <path
                        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                        transform=""
                      />
                    </svg>
                  </button>
                  <header
                    class="pf-c-modal-box__header"
                  >
                    <h1
                      class="pf-c-modal-box__title pf-c-modal-box__title"
                      id="pf-modal-part-1"
                    >
                      Edit console URL
                    </h1>
                  </header>
                  <div
                    class="pf-c-modal-box__body"
                    id="pf-modal-part-2"
                  >
                    <form
                      class="pf-c-form"
                      novalidate=""
                    >
                      <div
                        class="pf-c-form__group"
                      >
                        <div
                          class="pf-c-form__group-label"
                        >
                          <label
                            class="pf-c-form__label"
                            for="edit-console-url-input"
                          >
                            <span
                              class="pf-c-form__label-text"
                            >
                              Web console URL
                            </span>
                          </label>
                           
                        </div>
                        <div
                          class="pf-c-form__group-control"
                        >
                          <input
                            aria-invalid="false"
                            aria-label="Web console URL"
                            class="pf-c-form-control"
                            id="edit-console-url-input"
                            placeholder="https://console-openshift-console.apps.mycluster.example.com/"
                            type="text"
                            value=""
                          />
                          
                        </div>
                      </div>
                    </form>
                  </div>
                  <footer
                    class="pf-c-modal-box__footer"
                  >
                    <button
                      aria-disabled="true"
                      class="pf-c-button pf-m-primary pf-m-disabled"
                      data-ouia-component-id="2"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe="true"
                      disabled=""
                      type="submit"
                    >
                      Save
                    </button>
                    <button
                      aria-disabled="false"
                      class="pf-c-button pf-m-secondary"
                      data-ouia-component-id="3"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe="true"
                      type="button"
                    >
                      Cancel
                    </button>
                  </footer>
                </div>
              </div>
            </div>
          </div>
        }
      >
        <ModalContent
          actions={
            Array [
              <Button
                isDisabled={true}
                onClick={[Function]}
                type="submit"
                variant="primary"
              >
                Save
              </Button>,
              <Button
                onClick={[Function]}
                variant="secondary"
              >
                Cancel
              </Button>,
            ]
          }
          aria-describedby=""
          aria-label=""
          aria-labelledby=""
          boxId="pf-modal-part-0"
          className={null}
          descriptorId="pf-modal-part-2"
          hasNoBodyWrapper={false}
          isOpen={true}
          labelId="pf-modal-part-1"
          onClose={[Function]}
          ouiaSafe={true}
          showClose={true}
          title="Edit console URL"
          variant="small"
        >
          <Backdrop>
            <div
              className="pf-c-backdrop"
            >
              <FocusTrap
                active={true}
                className="pf-l-bullseye"
                focusTrapOptions={
                  Object {
                    "clickOutsideDeactivates": true,
                  }
                }
                paused={false}
              >
                <div
                  className="pf-l-bullseye"
                >
                  <ModalBox
                    aria-describedby="pf-modal-part-2"
                    aria-label=""
                    aria-labelledby="pf-modal-part-1"
                    className={null}
                    data-ouia-component-id={0}
                    data-ouia-component-type="PF4/ModalContent"
                    data-ouia-safe={true}
                    id="pf-modal-part-0"
                    style={Object {}}
                    variant="small"
                  >
                    <div
                      aria-describedby="pf-modal-part-2"
                      aria-label={null}
                      aria-labelledby="pf-modal-part-1"
                      aria-modal="true"
                      className="pf-c-modal-box pf-m-sm"
                      data-ouia-component-id={0}
                      data-ouia-component-type="PF4/ModalContent"
                      data-ouia-safe={true}
                      id="pf-modal-part-0"
                      role="dialog"
                      style={Object {}}
                    >
                      <ModalBoxCloseButton
                        onClose={[Function]}
                      >
                        <Button
                          aria-label="Close"
                          className=""
                          onClick={[Function]}
                          variant="plain"
                        >
                          <button
                            aria-disabled={false}
                            aria-label="Close"
                            className="pf-c-button pf-m-plain"
                            data-ouia-component-id={1}
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe={true}
                            disabled={false}
                            onClick={[Function]}
                            type="button"
                          >
                            <TimesIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 352 512"
                                width="1em"
                              >
                                <path
                                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                  transform=""
                                />
                              </svg>
                            </TimesIcon>
                          </button>
                        </Button>
                      </ModalBoxCloseButton>
                      <ModalBoxHeader>
                        <header
                          className="pf-c-modal-box__header"
                        >
                          <ModalBoxTitle
                            className="pf-c-modal-box__title"
                            id="pf-modal-part-1"
                            title="Edit console URL"
                          >
                            <h1
                              className="pf-c-modal-box__title pf-c-modal-box__title"
                              id="pf-modal-part-1"
                            >
                              Edit console URL
                            </h1>
                          </ModalBoxTitle>
                        </header>
                      </ModalBoxHeader>
                      <ModalBoxBody
                        id="pf-modal-part-2"
                      >
                        <div
                          className="pf-c-modal-box__body"
                          id="pf-modal-part-2"
                        >
                          <Form
                            onSubmit={[Function]}
                          >
                            <form
                              className="pf-c-form"
                              noValidate={true}
                              onSubmit={[Function]}
                            >
                              <FormGroup
                                fieldId="edit-console-url-input"
                                helperTextInvalid="Cluster console URL should not be empty"
                                label="Web console URL"
                                validated="default"
                              >
                                <div
                                  className="pf-c-form__group"
                                >
                                  <div
                                    className="pf-c-form__group-label"
                                  >
                                    <label
                                      className="pf-c-form__label"
                                      htmlFor="edit-console-url-input"
                                    >
                                      <span
                                        className="pf-c-form__label-text"
                                      >
                                        Web console URL
                                      </span>
                                    </label>
                                     
                                  </div>
                                  <div
                                    className="pf-c-form__group-control"
                                  >
                                    <ForwardRef
                                      aria-label="Web console URL"
                                      id="edit-console-url-input"
                                      onChange={[Function]}
                                      placeholder="https://console-openshift-console.apps.mycluster.example.com/"
                                      type="text"
                                      validated="default"
                                      value=""
                                    >
                                      <TextInputBase
                                        aria-label="Web console URL"
                                        className=""
                                        id="edit-console-url-input"
                                        innerRef={null}
                                        isDisabled={false}
                                        isLeftTruncated={false}
                                        isReadOnly={false}
                                        isRequired={false}
                                        onChange={[Function]}
                                        placeholder="https://console-openshift-console.apps.mycluster.example.com/"
                                        type="text"
                                        validated="default"
                                        value=""
                                      >
                                        <input
                                          aria-invalid={false}
                                          aria-label="Web console URL"
                                          className="pf-c-form-control"
                                          disabled={false}
                                          id="edit-console-url-input"
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onFocus={[Function]}
                                          placeholder="https://console-openshift-console.apps.mycluster.example.com/"
                                          readOnly={false}
                                          required={false}
                                          type="text"
                                          value=""
                                        />
                                      </TextInputBase>
                                    </ForwardRef>
                                  </div>
                                </div>
                              </FormGroup>
                            </form>
                          </Form>
                        </div>
                      </ModalBoxBody>
                      <ModalBoxFooter>
                        <footer
                          className="pf-c-modal-box__footer"
                        >
                          <Button
                            isDisabled={true}
                            key="confirm"
                            onClick={[Function]}
                            type="submit"
                            variant="primary"
                          >
                            <button
                              aria-disabled={true}
                              aria-label={null}
                              className="pf-c-button pf-m-primary pf-m-disabled"
                              data-ouia-component-id={2}
                              data-ouia-component-type="PF4/Button"
                              data-ouia-safe={true}
                              disabled={true}
                              onClick={[Function]}
                              tabIndex={null}
                              type="submit"
                            >
                              Save
                            </button>
                          </Button>
                          <Button
                            key="cancel"
                            onClick={[Function]}
                            variant="secondary"
                          >
                            <button
                              aria-disabled={false}
                              aria-label={null}
                              className="pf-c-button pf-m-secondary"
                              data-ouia-component-id={3}
                              data-ouia-component-type="PF4/Button"
                              data-ouia-safe={true}
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              Cancel
                            </button>
                          </Button>
                        </footer>
                      </ModalBoxFooter>
                    </div>
                  </ModalBox>
                </div>
              </FocusTrap>
            </div>
          </Backdrop>
        </ModalContent>
      </Portal>
    </Modal>
  </Modal>
</EditConsoleURLDialog>
`;

exports[`<EditConsoleURLDialog /> renders correctly when an erorr occurs 1`] = `
<EditConsoleURLDialog
  closeModal={[MockFunction]}
  clusterID="some-id"
  consoleURL="http://www.example.com"
  editClusterResponse={
    Object {
      "error": true,
      "errorMessage": "this is an error",
    }
  }
  isOpen={true}
  onClose={[MockFunction]}
  resetResponse={[MockFunction]}
  submit={[MockFunction]}
>
  <Modal
    isPrimaryDisabled={false}
    onClose={[Function]}
    onPrimaryClick={[Function]}
    onSecondaryClick={[Function]}
    primaryText="Save"
    secondaryText="Cancel"
    title="Edit console URL"
  >
    <Modal
      actions={
        Array [
          <Button
            isDisabled={false}
            onClick={[Function]}
            type="submit"
            variant="primary"
          >
            Save
          </Button>,
          <Button
            onClick={[Function]}
            variant="secondary"
          >
            Cancel
          </Button>,
        ]
      }
      appendTo={[Function]}
      aria-describedby=""
      aria-label=""
      aria-labelledby=""
      className={null}
      hasNoBodyWrapper={false}
      isOpen={true}
      onClose={[Function]}
      ouiaSafe={true}
      showClose={true}
      title="Edit console URL"
      variant="small"
    >
      <Portal
        containerInfo={
          <div>
            <div
              class="pf-c-backdrop"
            >
              <div
                class="pf-l-bullseye"
              >
                <div
                  aria-describedby="pf-modal-part-6"
                  aria-labelledby="pf-modal-part-5"
                  aria-modal="true"
                  class="pf-c-modal-box pf-m-sm"
                  data-ouia-component-id="32"
                  data-ouia-component-type="PF4/ModalContent"
                  data-ouia-safe="true"
                  id="pf-modal-part-4"
                  role="dialog"
                >
                  <button
                    aria-disabled="false"
                    aria-label="Close"
                    class="pf-c-button pf-m-plain"
                    data-ouia-component-id="33"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 352 512"
                      width="1em"
                    >
                      <path
                        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                        transform=""
                      />
                    </svg>
                  </button>
                  <header
                    class="pf-c-modal-box__header"
                  >
                    <h1
                      class="pf-c-modal-box__title pf-c-modal-box__title"
                      id="pf-modal-part-5"
                    >
                      Edit console URL
                    </h1>
                  </header>
                  <div
                    class="pf-c-modal-box__body"
                    id="pf-modal-part-6"
                  >
                    <div
                      aria-label="Danger Alert"
                      class="pf-c-alert pf-m-inline pf-m-danger error-box"
                      data-ouia-component-id="34"
                      data-ouia-component-type="PF4/Alert"
                      data-ouia-safe="true"
                    >
                      <div
                        class="pf-c-alert__icon"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style="vertical-align: -0.125em;"
                          viewBox="0 0 512 512"
                          width="1em"
                        >
                          <path
                            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                            transform=""
                          />
                        </svg>
                      </div>
                      <h4
                        class="pf-c-alert__title"
                      >
                        <span
                          class="pf-u-screen-reader"
                        >
                          Danger alert:
                        </span>
                        Error changing console URL
                      </h4>
                      <div
                        class="pf-c-alert__description"
                      >
                        <span>
                          this is an error
                        </span>
                        <br />
                        <span>
                          Operation ID: N/A
                        </span>
                      </div>
                    </div>
                    <form
                      class="pf-c-form"
                      novalidate=""
                    >
                      <div
                        class="pf-c-form__group"
                      >
                        <div
                          class="pf-c-form__group-label"
                        >
                          <label
                            class="pf-c-form__label"
                            for="edit-console-url-input"
                          >
                            <span
                              class="pf-c-form__label-text"
                            >
                              Web console URL
                            </span>
                          </label>
                           
                        </div>
                        <div
                          class="pf-c-form__group-control"
                        >
                          <input
                            aria-invalid="false"
                            aria-label="Web console URL"
                            class="pf-c-form-control"
                            id="edit-console-url-input"
                            placeholder="https://console-openshift-console.apps.mycluster.example.com/"
                            type="text"
                            value="http://www.example.com"
                          />
                          
                        </div>
                      </div>
                    </form>
                  </div>
                  <footer
                    class="pf-c-modal-box__footer"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-c-button pf-m-primary"
                      data-ouia-component-id="35"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe="true"
                      type="submit"
                    >
                      Save
                    </button>
                    <button
                      aria-disabled="false"
                      class="pf-c-button pf-m-secondary"
                      data-ouia-component-id="36"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe="true"
                      type="button"
                    >
                      Cancel
                    </button>
                  </footer>
                </div>
              </div>
            </div>
          </div>
        }
      >
        <ModalContent
          actions={
            Array [
              <Button
                isDisabled={false}
                onClick={[Function]}
                type="submit"
                variant="primary"
              >
                Save
              </Button>,
              <Button
                onClick={[Function]}
                variant="secondary"
              >
                Cancel
              </Button>,
            ]
          }
          aria-describedby=""
          aria-label=""
          aria-labelledby=""
          boxId="pf-modal-part-4"
          className={null}
          descriptorId="pf-modal-part-6"
          hasNoBodyWrapper={false}
          isOpen={true}
          labelId="pf-modal-part-5"
          onClose={[Function]}
          ouiaSafe={true}
          showClose={true}
          title="Edit console URL"
          variant="small"
        >
          <Backdrop>
            <div
              className="pf-c-backdrop"
            >
              <FocusTrap
                active={true}
                className="pf-l-bullseye"
                focusTrapOptions={
                  Object {
                    "clickOutsideDeactivates": true,
                  }
                }
                paused={false}
              >
                <div
                  className="pf-l-bullseye"
                >
                  <ModalBox
                    aria-describedby="pf-modal-part-6"
                    aria-label=""
                    aria-labelledby="pf-modal-part-5"
                    className={null}
                    data-ouia-component-id={32}
                    data-ouia-component-type="PF4/ModalContent"
                    data-ouia-safe={true}
                    id="pf-modal-part-4"
                    style={Object {}}
                    variant="small"
                  >
                    <div
                      aria-describedby="pf-modal-part-6"
                      aria-label={null}
                      aria-labelledby="pf-modal-part-5"
                      aria-modal="true"
                      className="pf-c-modal-box pf-m-sm"
                      data-ouia-component-id={32}
                      data-ouia-component-type="PF4/ModalContent"
                      data-ouia-safe={true}
                      id="pf-modal-part-4"
                      role="dialog"
                      style={Object {}}
                    >
                      <ModalBoxCloseButton
                        onClose={[Function]}
                      >
                        <Button
                          aria-label="Close"
                          className=""
                          onClick={[Function]}
                          variant="plain"
                        >
                          <button
                            aria-disabled={false}
                            aria-label="Close"
                            className="pf-c-button pf-m-plain"
                            data-ouia-component-id={33}
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe={true}
                            disabled={false}
                            onClick={[Function]}
                            type="button"
                          >
                            <TimesIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 352 512"
                                width="1em"
                              >
                                <path
                                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                  transform=""
                                />
                              </svg>
                            </TimesIcon>
                          </button>
                        </Button>
                      </ModalBoxCloseButton>
                      <ModalBoxHeader>
                        <header
                          className="pf-c-modal-box__header"
                        >
                          <ModalBoxTitle
                            className="pf-c-modal-box__title"
                            id="pf-modal-part-5"
                            title="Edit console URL"
                          >
                            <h1
                              className="pf-c-modal-box__title pf-c-modal-box__title"
                              id="pf-modal-part-5"
                            >
                              Edit console URL
                            </h1>
                          </ModalBoxTitle>
                        </header>
                      </ModalBoxHeader>
                      <ModalBoxBody
                        id="pf-modal-part-6"
                      >
                        <div
                          className="pf-c-modal-box__body"
                          id="pf-modal-part-6"
                        >
                          <ErrorBox
                            message="Error changing console URL"
                            response={
                              Object {
                                "error": true,
                                "errorMessage": "this is an error",
                              }
                            }
                          >
                            <Alert
                              className="error-box"
                              isInline={true}
                              title="Error changing console URL"
                              variant="danger"
                            >
                              <div
                                aria-label="Danger Alert"
                                className="pf-c-alert pf-m-inline pf-m-danger error-box"
                                data-ouia-component-id={34}
                                data-ouia-component-type="PF4/Alert"
                                data-ouia-safe={true}
                              >
                                <Component
                                  variant="danger"
                                >
                                  <div
                                    className="pf-c-alert__icon"
                                  >
                                    <ExclamationCircleIcon
                                      color="currentColor"
                                      noVerticalAlign={false}
                                      size="sm"
                                    >
                                      <svg
                                        aria-hidden={true}
                                        aria-labelledby={null}
                                        fill="currentColor"
                                        height="1em"
                                        role="img"
                                        style={
                                          Object {
                                            "verticalAlign": "-0.125em",
                                          }
                                        }
                                        viewBox="0 0 512 512"
                                        width="1em"
                                      >
                                        <path
                                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                                          transform=""
                                        />
                                      </svg>
                                    </ExclamationCircleIcon>
                                  </div>
                                </Component>
                                <h4
                                  className="pf-c-alert__title"
                                >
                                  <span
                                    className="pf-u-screen-reader"
                                  >
                                    Danger alert:
                                  </span>
                                  Error changing console URL
                                </h4>
                                <div
                                  className="pf-c-alert__description"
                                >
                                  <span>
                                    this is an error
                                  </span>
                                  <br />
                                  <span>
                                    Operation ID: N/A
                                  </span>
                                </div>
                              </div>
                            </Alert>
                          </ErrorBox>
                          <Form
                            onSubmit={[Function]}
                          >
                            <form
                              className="pf-c-form"
                              noValidate={true}
                              onSubmit={[Function]}
                            >
                              <FormGroup
                                fieldId="edit-console-url-input"
                                label="Web console URL"
                                validated="default"
                              >
                                <div
                                  className="pf-c-form__group"
                                >
                                  <div
                                    className="pf-c-form__group-label"
                                  >
                                    <label
                                      className="pf-c-form__label"
                                      htmlFor="edit-console-url-input"
                                    >
                                      <span
                                        className="pf-c-form__label-text"
                                      >
                                        Web console URL
                                      </span>
                                    </label>
                                     
                                  </div>
                                  <div
                                    className="pf-c-form__group-control"
                                  >
                                    <ForwardRef
                                      aria-label="Web console URL"
                                      id="edit-console-url-input"
                                      onChange={[Function]}
                                      placeholder="https://console-openshift-console.apps.mycluster.example.com/"
                                      type="text"
                                      validated="default"
                                      value="http://www.example.com"
                                    >
                                      <TextInputBase
                                        aria-label="Web console URL"
                                        className=""
                                        id="edit-console-url-input"
                                        innerRef={null}
                                        isDisabled={false}
                                        isLeftTruncated={false}
                                        isReadOnly={false}
                                        isRequired={false}
                                        onChange={[Function]}
                                        placeholder="https://console-openshift-console.apps.mycluster.example.com/"
                                        type="text"
                                        validated="default"
                                        value="http://www.example.com"
                                      >
                                        <input
                                          aria-invalid={false}
                                          aria-label="Web console URL"
                                          className="pf-c-form-control"
                                          disabled={false}
                                          id="edit-console-url-input"
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onFocus={[Function]}
                                          placeholder="https://console-openshift-console.apps.mycluster.example.com/"
                                          readOnly={false}
                                          required={false}
                                          type="text"
                                          value="http://www.example.com"
                                        />
                                      </TextInputBase>
                                    </ForwardRef>
                                  </div>
                                </div>
                              </FormGroup>
                            </form>
                          </Form>
                        </div>
                      </ModalBoxBody>
                      <ModalBoxFooter>
                        <footer
                          className="pf-c-modal-box__footer"
                        >
                          <Button
                            isDisabled={false}
                            key="confirm"
                            onClick={[Function]}
                            type="submit"
                            variant="primary"
                          >
                            <button
                              aria-disabled={false}
                              aria-label={null}
                              className="pf-c-button pf-m-primary"
                              data-ouia-component-id={35}
                              data-ouia-component-type="PF4/Button"
                              data-ouia-safe={true}
                              disabled={false}
                              onClick={[Function]}
                              type="submit"
                            >
                              Save
                            </button>
                          </Button>
                          <Button
                            key="cancel"
                            onClick={[Function]}
                            variant="secondary"
                          >
                            <button
                              aria-disabled={false}
                              aria-label={null}
                              className="pf-c-button pf-m-secondary"
                              data-ouia-component-id={36}
                              data-ouia-component-type="PF4/Button"
                              data-ouia-safe={true}
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              Cancel
                            </button>
                          </Button>
                        </footer>
                      </ModalBoxFooter>
                    </div>
                  </ModalBox>
                </div>
              </FocusTrap>
            </div>
          </Backdrop>
        </ModalContent>
      </Portal>
    </Modal>
  </Modal>
</EditConsoleURLDialog>
`;
